--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "mongoose": "^5.0.14",
+    "nodemon": "^1.18.10",
     "socket.io": "^2.1.0"
   }
 }
